Edit Staging ConfigMap

--- a/hello/overlays/staging/map.yaml
+++ b/hello/overlays/staging/map.yaml
@@ -3,5 +3,5 @@ kind: ConfigMap
 metadata:
   name: the-map
 data:
-  altGreeting: "Have a pineapple!"
-  enableRisky: "true"
+  altGreeting: "Have a pineapple Edited!"
+  enableRisky: "false"
