--- a/hello/base/kustomization.yaml
+++ b/hello/base/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: hello
 metadata:
   name: arbitrary
 
@@ -9,6 +10,7 @@ commonLabels:
   app: hello
 
 resources:
+- namespace.yaml
 - deployment.yaml
 - service.yaml
 - configMap.yaml
