--- a/hello/base/configMap.yaml
+++ b/hello/base/configMap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: the-map
+  name: hello
 data:
   altGreeting: "Good Morning!"
   enableRisky: "false"
