--- a/hello/base/deployment.yaml
+++ b/hello/base/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: the-deployment
+  name: hello
 spec:
   replicas: 3
   selector:
@@ -24,10 +24,10 @@ spec:
         - name: ALT_GREETING
           valueFrom:
             configMapKeyRef:
-              name: the-map
+              name: hello
               key: altGreeting
         - name: ENABLE_RISKY
           valueFrom:
             configMapKeyRef:
-              name: the-map
+              name: hello
               key: enableRisky
