--- a/hello/base/kustomization.yaml
+++ b/hello/base/kustomization.yaml
@@ -1,14 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: hello
 metadata:
   name: arbitrary
 
 # Example configuration for the webserver
 # at https://github.com/monopole/hello
-commonLabels:
-  app: hello
-
+labels:
+  - includeSelectors: true
+    pairs:
+      app: hello
+namespace: hello
 resources:
 - namespace.yaml
 - deployment.yaml
