--- a/hello/overlays/production/kustomization.yaml
+++ b/hello/overlays/production/kustomization.yaml
@@ -1,7 +1,11 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 namePrefix: production-
-commonLabels:
-  variant: production
-  org: acmeCorporation
+labels:
+- includeSelectors: true
+  pairs:
+    org: acmeCorporation
+    variant: production
 commonAnnotations:
   note: Hello, I am production!
 resources:
