--- a/hello/overlays/staging/kustomization.yaml
+++ b/hello/overlays/staging/kustomization.yaml
@@ -1,7 +1,11 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 namePrefix: staging-
-commonLabels:
-  variant: staging
-  org: acmeCorporation
+labels:
+- includeSelectors: true
+  pairs:
+    org: acmeCorporation
+    variant: staging
 commonAnnotations:
   note: Hello, I am staging!
 resources:
